{{$NEXT}}

2.66     2017-08-14

- Fixed the ApacheLog output, which was broken in 2.60. Fixed by Michael
  Schout. GitHub #48 and #49.


2.65     2017-06-11

- When Log::Dispatch::File is asked to chmod a file and that fails, show the
  requested permissions in octal. Patch by Carsten Grohmann. GitHub #46.


2.64     2017-02-25 (TRIAL RELEASE)

- Improve level validation and canonicalization logic. Patch by Kerin Millar,
  minor changes and tests by Kivanc Yazan. Github #42.

- The log_and_die and log_and_croak methods are now identical, as we set
  @CARP_NOT for Log::Dispatch to exclude the Log::Dispatch package. You can
  still explicitly pass carp_level to log_and_croak.


2.63     2017-02-19

 - Updated the conflicting version for Log::Dispatch::File::Stamped in
   metadata (due to changes in handling of close_after_write). Patch by Karen
   Etheridge. GitHub #41.


2.62     2017-02-13

- Devel::Confess was accidentally being loaded in Log::Dispatch. Fixed by
  Karen Etheridge. GitHub #39.


2.61     2017-02-13

- The 2.60 release would throw an exception if the logged message was
  empty. While this makes sense, it also breaks backwards compatibility, so it
  has been reverted. Reported by Greg Oschwald. GitHub #38.

- The 2.60 release would throw an exception if you tried to create a Syslog
  output where the ident was an empty string. Reported by Greg
  Oschwald. GitHub #38.


2.60     2017-02-12

- Same as 2.59 ... Switched from Params::Validate to
  Params::ValidationCompiler. This should speed up constructors and logging a
  little bit. This also allows Log::Dispatch::File to accept things like
  Path::Tiny objects for filenames. Reported by Joel Berger. GitHub #36.


2.59     2017-02-05 (TRIAL RELEASE)

- Switched from Params::Validate to Params::ValidationCompiler. This should
  speed up constructors and logging a little bit. This also allows
  Log::Dispatch::File to accept things like Path::Tiny objects for